--- a/test/index.html
+++ b/test/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
         <title> Testseite </title>
+        <link rel="stylesheet" type="text/css"  href="style.css" />
     </head>
 
     <body>
-        Hallo dies ist aus der index.html
+       <p> Hallo dies ist aus der index.html</p>
     </body>
 </html>
