--- a/test/index.html
+++ b/test/index.html
@@ -1,10 +1,11 @@
 <html>
     <head>
         <title> Testseite </title>
-        <link rel="stylesheet" type="text/css"  href="style.css" />
+        <link rel="stylesheet" type="text/css"  href="css/styles2.css" />
     </head>
 
     <body>
-       <p> Hallo dies ist aus der index.html</p>
+        <h1> Testseite </h1>
+       <p class= 'myclass'> Hallo dies ist aus der index.html</p>
     </body>
 </html>
