--- a/test/index.html
+++ b/test/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1> Testseite </h1>
        <p class= 'myclass'> Hallo dies ist aus der index.html</p>
+       <a href="html/link.html">Link</a>
     </body>
 </html>
